--- a/sass/shaarli.scss
+++ b/sass/shaarli.scss
@@ -73,6 +73,12 @@ $form-input-background: #eee;
 }
 
 // General
+
+// Box sizing
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
 body {
 	background: var(--background-color);
 	font: 16px/1.4 Roboto, arial, sans-serif;
@@ -972,10 +978,9 @@ pre {
   border-radius: 2px;
   background: $form-input-background;
   padding: 5px 5px 3px 15px;
-  width: 90%;
+  width: 100%;
   height: 35px;
   color: $dark-gray;
-  box-sizing: border-box;
 }
 
 %page-form-button {
@@ -986,7 +991,7 @@ pre {
   background: var(--main-color);
   min-width: 150px;
   height: 35px;
-  vertical-align: center;
+  text-align: center;
   text-decoration: none;
   line-height: 35px;
   color: $almost-white;
@@ -996,22 +1001,27 @@ pre {
 
 .page-form {
   margin: 20px 0 0;
+	padding: 4px 80px;
   box-shadow: 1px 1px 2px $light-gray;
   background: $almost-white;
   overflow: hidden;
   color: $dark-gray;
+	label {
+		margin-top: 16px;
+		display: inline-block;
+	}
 
   .window-title {
-    margin: 0 0 10px;
+    margin: 0 0 -16px;
     background: $almost-white;
     padding: 10px 0;
     width: 100%;
-    text-align: center;
+    text-align: left;
     color: var(--main-color);
   }
 
   .window-subtitle {
-    text-align: center;
+    text-align: left;
   }
 
   a {
@@ -1022,6 +1032,10 @@ pre {
     &.button {
       @extend %page-form-button;
     }
+
+	&:hover {
+		color: $dark-green;
+	}
   }
 
   p {
@@ -1030,7 +1044,7 @@ pre {
   }
 
   input {
-    &[type='text'] {
+    &[type="text"] {
       @extend %page-form-input;
 
       &::-webkit-input-placeholder {
@@ -1038,7 +1052,7 @@ pre {
       }
     }
 
-    &[type='password'] {
+    &[type="password"] {
       @extend %page-form-input;
 
       &::-webkit-input-placeholder {
@@ -1046,8 +1060,11 @@ pre {
       }
     }
 
-    &[type='submit'] {
+    &[type="submit"] {
       @extend %page-form-button;
+		&:hover {
+			background-color: $dark-green;
+		}
     }
   }
 
@@ -1068,7 +1085,12 @@ pre {
   .button {
     &.button-red {
       background: $red;
+		color: $white;
     }
+	&:hover {
+		color: $white;
+		opacity: 0.8;
+	}
   }
 
   .submit-buttons {
@@ -1148,7 +1170,7 @@ pre {
 .page-form-light {
   div,
   p {
-    text-align: center;
+    text-align: left;
   }
 }
 
@@ -1303,7 +1325,8 @@ form {
 // EDIT LINK
 .edit-link-container {
   .created-date {
-    margin-bottom: 10px;
+	float: right;
+    margin-top: -36px;
     color: $light-gray;
   }
 }
@@ -1656,6 +1679,20 @@ form {
   }
 }
 
+.mark-private {
+	float: right;
+	margin-top: -36px;
+	input {
+		margin-right: 4px;
+	}
+}
+
+#editlink-plugins {
+	float: right;
+	font-size: 14px;
+	margin-top: 16px;
+}
+
 // Print rules
 @media print {
   .shaarli-menu {
@@ -1669,3 +1706,4 @@ form {
     display: none;
   }
 }
+
