--- a/sass/shaarli.scss
+++ b/sass/shaarli.scss
@@ -936,6 +936,22 @@ pre {
 			border: 1px solid $blue;
 		}
 	}
+
+	// This is needed for the js to work correctly
+	a.fold-button {
+		border: none;
+		.fa {
+			display: inline-block;
+			border-radius: 3px;
+			border: 1px solid $white;
+			font-size: 24px;
+			padding: 4px 12px;
+
+			&:hover {
+				border: 1px solid $blue;
+			}
+		}
+	}
 }
 
 // Replace QR Code png with icon
