--- a/sass/shaarli.scss
+++ b/sass/shaarli.scss
@@ -88,6 +88,17 @@ body {
 	font-family: Roboto, arial, sans-serif;
 }
 
+/* Set up pure grids to have 20px gutters @ 1140px (use 12 not 24) */
+.pure-g-full {
+	width: 1140px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.pure-g-full > * {
+    padding: 0 10px;
+}
+
 .strong {
   font-weight: bold;
 }
@@ -97,8 +108,9 @@ body {
 }
 
 .center {
-  margin: auto;
-  text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
 }
 
 .label {
@@ -214,8 +226,8 @@ pre {
 }
 
 .shaarli-menu {
-	margin: auto;
-	width: 1140px;
+	margin-left: auto;
+	margin-right: auto;
 	& > div {
 		margin-bottom: 8px;
 	}
@@ -525,8 +537,6 @@ pre {
 	position: relative;
 	z-index: 2;
 	margin: auto;
-// KAC - Turn off responsiveness for now
-	width: 1140px;
 }
 
 // Plugins additional forms
@@ -581,7 +591,7 @@ pre {
 	display: inline-block;
 	position: absolute;
 	top: -4px;
-	right: 0;
+	right: 10px;
 
   a {
     display: inline-block;
@@ -884,7 +894,7 @@ pre {
 .linklist-item-infos {
 	position: absolute;
 	top: -4px;
-	right: 0px;
+	right: -8px;
 
   a {
     text-decoration: none;
@@ -1037,7 +1047,7 @@ pre {
   font-weight: normal;
 }
 
-.page-form {
+.pure-g .page-form {
   margin: 20px 0 0;
 	padding: 4px 80px;
   box-shadow: 1px 1px 2px $light-gray;
@@ -1150,6 +1160,7 @@ pre {
     border-width: 1px 0;
     border-style: solid;
     border-color: $light-gray;
+	border-collapse: collapse;
   }
 
   th,
