--- a/sass/shaarli.scss
+++ b/sass/shaarli.scss
@@ -146,26 +146,6 @@ pre {
   display: none !important;
 }
 
-@media screen and (min-width: 35.5em) {
-  .pure-u-sm-0 {
-    display: none !important;
-  }
-
-  .pure-u-sm-visible {
-    display: inline-block !important;
-  }
-}
-
-@media screen and (min-width: 48em) {
-  .pure-u-md-0 {
-    display: none !important;
-  }
-
-  .pure-u-md-visible {
-    display: inline-block !important;
-  }
-}
-
 @media screen and (min-width: 64em) {
   .pure-u-lg-0 {
     display: none !important;
@@ -174,15 +154,30 @@ pre {
   .pure-u-lg-visible {
     display: inline-block !important;
   }
+
+  .page-form {
+    .submit-buttons {
+      position: relative;
+
+      .button {
+        &.button-red {
+          position: absolute;
+          right: 5%;
+        }
+      }
+    }
+  }
 }
 
-@media screen and (min-width: 80em) {
-  .pure-u-xl-0 {
-    display: none !important;
-  }
+@media screen and (min-width: 64em) {
+  .subheader-form {
+    &.open {
+      visibility: visible;
 
-  .pure-u-xl-visible {
-    display: inline-block !important;
+      * {
+        visibility: visible;
+      }
+    }
   }
 }
 
@@ -327,12 +322,6 @@ pre {
   }
 }
 
-@media screen and (max-width: 64em) {
-  .menu-toggle {
-    display: block;
-  }
-}
-
 .header-buttons {
   text-align: right;
 }
@@ -357,7 +346,7 @@ pre {
       box-shadow: 0 1px 0 $light-shadow, 0 1px 1px $dark-shadow inset;
       background: $almost-white;
       padding: 0 12px;
-      width: 240px;
+      width: 232px;
       height: 30px;
       color: $dark-gray;
 		margin-right: 16px;
@@ -375,32 +364,20 @@ pre {
     color: $almost-white;
 	position: relative;
 	top: 3px;
-	font-size: 22px;
-  }
-}
+	left: -10px;
+	font-size: 26px;
+	width: 44px;
+	height: 44px;
 
-@media screen and (max-width: 64em) {
-  .searchform {
-    margin: 0 auto;
-    max-width: 260px;
+	&:hover {
+    	color: $white;
+	}
   }
 }
 
 .search-tagcloud {
   button {
     width: 90%;
-  }
-}
-
-@media screen and (max-width: 64em) {
-  .search-linklist {
-    button {
-      width: 100%;
-    }
-
-    .awesomplete {
-      margin: 5px 0;
-    }
   }
 }
 
@@ -411,13 +388,6 @@ pre {
     &:hover {
       color: var(--background-color);
     }
-  }
-}
-
-@media screen and (max-width: 64em) {
-  .header-search ,
-  .header-search * {
-    visibility: hidden;
   }
 }
 
@@ -511,18 +481,6 @@ pre {
   }
 }
 
-@media screen and (min-width: 64em) {
-  .subheader-form {
-    &.open {
-      visibility: visible;
-
-      * {
-        visibility: visible;
-      }
-    }
-  }
-}
-
 .new-version-message {
   text-align: center;
 
@@ -575,22 +533,12 @@ pre {
   }
 }
 
-@media screen and (max-width: 64em) {
-  .toolbar-plugin {
-    input {
-      &[type='text'] {
-        width: 70%;
-      }
-    }
-  }
-}
-
 // CONTENT - LINKLIST PAGING
 // 64em -> lg
 .linklist-filters {
 	display: inline-block;
 	position: absolute;
-	top: -4px;
+	top: 6px;
 	right: 10px;
 
   a {
@@ -622,8 +570,7 @@ pre {
 .linklist-pages {
 	display: inline-block;
 	position: relative;
-	top: -6px;
-	left: 36px;
+	top: 5px;
 
   a {
 	color: $almost-white;
@@ -708,10 +655,10 @@ pre {
   margin: 0 0 16px;
 
   &.private {
-	.linklist-item-title h2, .linklist-item-title h2 a {
+	h2.linklist-item-title h2, h2.linklist-item-title a {
 		color: $orange;
 	}
-	.linklist-item-title h2 a:hover {
+	h2.linklist-item-title a:hover {
 		color: $warning-text;
 	}
   }
@@ -741,12 +688,7 @@ pre {
 	margin: 1em 0;
 }
 
-.linklist-item-title {
-  position: relative;
-  margin: 0 0 0px 0;
-  word-wrap: break-word;
-
-  h2 {
+h2.linklist-item-title {
     margin: 0;
     word-wrap: break-word;
 	font-size: 22px;
@@ -768,7 +710,6 @@ pre {
 		color: var(--dark-main-color);
       }
     }
-  }
 
   .label {
   }
@@ -827,7 +768,6 @@ pre {
   position: relative;
   color: $dark-gray;
   word-wrap: break-word;
-	max-width: 800px;
 
   a {
     text-decoration: none;
@@ -895,6 +835,7 @@ pre {
 	position: absolute;
 	top: -4px;
 	right: -8px;
+	text-align: right;
 
   a {
     text-decoration: none;
@@ -910,16 +851,12 @@ pre {
   }
 }
 
-.linklist-item-infos-dateblock {
-  font-size: .9em;
-}
-
 .linklist-item-infos-url {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 	font-size: 12.7px;
-	margin: 12px 0 4px;
+	margin: 0px 0 4px;
 	a {
 		color: $light-gray;
 		text-decoration: none;
@@ -990,13 +927,6 @@ pre {
 }
 
 .ctrl-delete {
-}
-
-// 64em -> lg
-@media screen and (max-width: 64em) {
-  .linklist-item-infos-url {
-    text-align: left;
-  }
 }
 
 // Footer
@@ -1195,31 +1125,6 @@ pre {
   }
 }
 
-@media screen and (min-width: 64em) {
-  .page-form {
-    .submit-buttons {
-      position: relative;
-
-      .button {
-        &.button-red {
-          position: absolute;
-          right: 5%;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 64em) {
-  .page-form {
-    .submit-buttons {
-      .button {
-        margin: auto;
-      }
-    }
-  }
-}
-
 // PAGE FORM - LIGHT
 .page-form-light {
   div,
@@ -1320,59 +1225,6 @@ form {
   }
 }
 
-@media screen and (max-width: 64em) {
-  %page-form-valign-mobile {
-    position: inherit;
-    top: inherit;
-    transform: translateY(0);
-  }
-
-  .page-form-complete {
-    .form-label {
-      height: inherit;
-
-      label {
-        @extend %page-form-valign-mobile;
-
-        display: block;
-        margin: 10px 0 0;
-        text-align: left;
-      }
-    }
-
-    .form-input {
-      text-align: center;
-
-      input {
-        @extend %page-form-valign-mobile;
-
-        &[type='checkbox'] {
-          position: absolute;
-          top: 50%;
-          right: 50%;
-          transform: translateY(-50%);
-        }
-      }
-    }
-
-    .timezone {
-      @extend %page-form-valign-mobile;
-    }
-
-    .radio-buttons {
-      padding: 5px 15px;
-      text-align: left;
-    }
-  }
-
-  .timezone-continent {
-    &::after {
-      white-space: pre;
-      content: '\a\a';
-    }
-  }
-}
-
 // Page visitor (page form extended)
 .page-visitor {
   color: $dark-gray;
@@ -1447,20 +1299,6 @@ form {
 
   .more {
     margin-top: 10px;
-  }
-}
-
-@media screen and (max-width: 64em) {
-  .pluginform-container {
-    .main-row {
-      border-top-style: none;
-      border-bottom-style: none;
-
-      td {
-        border-top-style: none;
-        border-bottom-style: none;
-      }
-    }
   }
 }
 
@@ -1760,6 +1598,151 @@ form {
 	margin-top: 16px;
 }
 
+// 64em -> lg
+@media screen and (max-width: 64em) {
+	.pure-g-full {
+		width: 100%;
+	}
+	.pure-g-full > * {
+		padding: 0;
+	}
+	.pure-u-lg-visible {
+		display: none !important;
+	}
+
+	.menu-toggle {
+		display: block;
+	}
+
+	#shaarli-menu.open {
+		.pure-menu-item {
+			display: block !important;
+		}
+	}
+
+	.search-linklist {
+		position: relative;
+		padding: 0 1em;
+
+		button {
+			position: absolute;
+			left: 260px;
+			top: -8px;
+		}
+
+		input.searchterm {
+			margin-bottom: 12px;
+		}
+	}
+
+	.linklist-item {
+		padding: 0 1em;
+	}
+
+	.linklist-paging {
+		padding: 0 1em;
+	}
+
+	.linklist-item-infos {
+		position: relative;
+		top: 0;
+	}
+}
+
+@media screen and (max-width: 64em) {
+  .header-search ,
+  .header-search * {
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 64em) {
+  .toolbar-plugin {
+    input {
+      &[type='text'] {
+        width: 70%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 64em) {
+  .page-form {
+    .submit-buttons {
+      .button {
+        margin: auto;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 64em) {
+  .pluginform-container {
+    .main-row {
+      border-top-style: none;
+      border-bottom-style: none;
+
+      td {
+        border-top-style: none;
+        border-bottom-style: none;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 64em) {
+  %page-form-valign-mobile {
+    position: inherit;
+    top: inherit;
+    transform: translateY(0);
+  }
+
+  .page-form-complete {
+    .form-label {
+      height: inherit;
+
+      label {
+        @extend %page-form-valign-mobile;
+
+        display: block;
+        margin: 10px 0 0;
+        text-align: left;
+      }
+    }
+
+    .form-input {
+      text-align: center;
+
+      input {
+        @extend %page-form-valign-mobile;
+
+        &[type='checkbox'] {
+          position: absolute;
+          top: 50%;
+          right: 50%;
+          transform: translateY(-50%);
+        }
+      }
+    }
+
+    .timezone {
+      @extend %page-form-valign-mobile;
+    }
+
+    .radio-buttons {
+      padding: 5px 15px;
+      text-align: left;
+    }
+  }
+
+  .timezone-continent {
+    &::after {
+      white-space: pre;
+      content: '\a\a';
+    }
+  }
+}
+
 // Print rules
 @media print {
   .shaarli-menu {
@@ -1773,4 +1756,3 @@ form {
     display: none;
   }
 }
-
